--- a/index.html
+++ b/index.html
@@ -27,32 +27,33 @@
 	<nav class="top-nav">
 		<img src="./navhead.png">
 		<div class="nav-links">
-			<button class="nav-button">
+			<label class="nav-button">
 				<i class="fa fa-navicon"></i>
-			</button>
+				<div class="drop-down-menu">
+					<a href="#Home">HOME</a>
+					<a href="#Content">CONTENTS</a>
+					<a href="#Pages">PAGES</a>
+				</div>
+			</label>
 			<div id="full-bar">
-				<a href="#Home">HOME</a></li>
-				<a href="#Portfolio">PORTFOLIO</a></li>
-				<a href="#About">ABOUT</a></li>
-				<a id="blog" href="#Blog">BLOG
-				<i class="fa fa-angle-down"></i>
+				<label href="#Home">HOME</label>
+				<label href="#Portfolio">PORTFOLIO</label>
+				<label href="#About">ABOUT</label>
+				<label id="blog" href="#Blog">BLOG
 					<div id="dropdown-content-blog">
 						<a href="#New Blog">NEW BLOG</a>
 						<a href="#Edit Blog">EDIT BLOG</a>
 						<a href="#View Blog">VIEW BLOGS</a>
 					</div>
-				</a>	
-				<a href="#Pages">PAGES
+				<i class="fa fa-angle-down"></i>
+				</label>	
+				<label href="#Pages">PAGES
 					<i class="fa fa-angle-down"></i>
-				</a>
-				<a href="#Content">CONTENT</a>
+				</label>
+				<label href="#Content">CONTENT</label>
 			</div>
 		</div>
 	</nav>
-	<div class="drop-down-menu">
-			<a href="#Blog">BLOGS</a>
-			<a href="#Blog">BLOGS</a>
-	</div>
 	<div class="home-banner-container">
 		<img class="home-banner" src="./home-banner-bg.png">
 		<div class="banner-text">Creativity<br>Beyond<br>Life</div>
